tests/negative/test_decl_cn_arr_not_init.orb
fnc main() {
    i32[4] cn arr;
}